feat: Refacto css

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,105 +1,5 @@
 @font-face {
     font-family: 'SF Pro Display';
-    src: url('../fonts/SFProDisplay-Black.woff2') format('woff2'),
-        url('../fonts/SFProDisplay-Black.woff') format('woff'),
-        url('../fonts/SFProDisplay-Black.ttf') format('truetype');
-    font-weight: 900;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'SF Pro Display';
-    src: url('../fonts/SFProDisplay-Heavy.woff2') format('woff2'),
-        url('../fonts/SFProDisplay-Heavy.woff') format('woff'),
-        url('../fonts/SFProDisplay-Heavy.ttf') format('truetype');
-    font-weight: 900;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'SF Pro Display';
-    src: url('../fonts/SFProDisplay-BlackItalic.woff2') format('woff2'),
-        url('../fonts/SFProDisplay-BlackItalic.woff') format('woff'),
-        url('../fonts/SFProDisplay-BlackItalic.ttf') format('truetype');
-    font-weight: 900;
-    font-style: italic;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'SF Pro Display';
-    src: url('../fonts/SFProDisplay-Bold.woff2') format('woff2'),
-        url('../fonts/SFProDisplay-Bold.woff') format('woff'),
-        url('../fonts/SFProDisplay-Bold.ttf') format('truetype');
-    font-weight: bold;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'SF Pro Display';
-    src: url('../fonts/SFProDisplay-HeavyItalic.woff2') format('woff2'),
-        url('../fonts/SFProDisplay-HeavyItalic.woff') format('woff'),
-        url('../fonts/SFProDisplay-HeavyItalic.ttf') format('truetype');
-    font-weight: 900;
-    font-style: italic;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'SF Pro Display';
-    src: url('../fonts/SFProDisplay-BoldItalic.woff2') format('woff2'),
-        url('../fonts/SFProDisplay-BoldItalic.woff') format('woff'),
-        url('../fonts/SFProDisplay-BoldItalic.ttf') format('truetype');
-    font-weight: bold;
-    font-style: italic;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'SF Pro Display';
-    src: url('../fonts/SFProDisplay-LightItalic.woff2') format('woff2'),
-        url('../fonts/SFProDisplay-LightItalic.woff') format('woff'),
-        url('../fonts/SFProDisplay-LightItalic.ttf') format('truetype');
-    font-weight: 200;
-    font-style: italic;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'SF Pro Display';
-    src: url('../fonts/SFProDisplay-Medium.woff2') format('woff2'),
-        url('../fonts/SFProDisplay-Medium.woff') format('woff'),
-        url('../fonts/SFProDisplay-Medium.ttf') format('truetype');
-    font-weight: 500;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'SF Pro Display';
-    src: url('../fonts/SFProDisplay-Light.woff2') format('woff2'),
-        url('../fonts/SFProDisplay-Light.woff') format('woff'),
-        url('../fonts/SFProDisplay-Light.ttf') format('truetype');
-    font-weight: 200;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'SF Pro Display';
-    src: url('../fonts/SFProDisplay-MediumItalic.woff2') format('woff2'),
-        url('../fonts/SFProDisplay-MediumItalic.woff') format('woff'),
-        url('../fonts/SFProDisplay-MediumItalic.ttf') format('truetype');
-    font-weight: 500;
-    font-style: italic;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'SF Pro Display';
     src: url('../fonts/SFProDisplay-Regular.woff2') format('woff2'),
         url('../fonts/SFProDisplay-Regular.woff') format('woff'),
         url('../fonts/SFProDisplay-Regular.ttf') format('truetype');
@@ -108,27 +8,7 @@
     font-display: swap;
 }
 
-@font-face {
-    font-family: 'SF Pro Display';
-    src: url('../fonts/SFProDisplay-Semibold.woff2') format('woff2'),
-        url('../fonts/SFProDisplay-Semibold.woff') format('woff'),
-        url('../fonts/SFProDisplay-Semibold.ttf') format('truetype');
-    font-weight: 600;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'SF Pro Display';
-    src: url('../fonts/SFProDisplay-RegularItalic.woff2') format('woff2'),
-        url('../fonts/SFProDisplay-RegularItalic.woff') format('woff'),
-        url('../fonts/SFProDisplay-RegularItalic.ttf') format('truetype');
-    font-weight: normal;
-    font-style: italic;
-    font-display: swap;
-}
-
-@font-face {
+ @font-face {
     font-family: 'SF Pro Display';
     src: url('../fonts/SFProDisplay-Thin.woff2') format('woff2'),
         url('../fonts/SFProDisplay-Thin.woff') format('woff'),
@@ -140,19 +20,9 @@
 
 @font-face {
     font-family: 'SF Pro Display';
-    src: url('../fonts/SFProDisplay-SemiboldItalic.woff2') format('woff2'),
-        url('../fonts/SFProDisplay-SemiboldItalic.woff') format('woff'),
-        url('../fonts/SFProDisplay-SemiboldItalic.ttf') format('truetype');
-    font-weight: 600;
-    font-style: italic;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'SF Pro Display';
-    src: url('../fonts/SFProDisplay-Ultralight.woff2') format('woff2'),
-        url('../fonts/SFProDisplay-Ultralight.woff') format('woff'),
-        url('../fonts/SFProDisplay-Ultralight.ttf') format('truetype');
+    src: url('../fonts/SFProDisplay-Thin.woff2') format('woff2'),
+        url('../fonts/SFProDisplay-Thin.woff') format('woff'),
+        url('../fonts/SFProDisplay-Thin.ttf') format('truetype');
     font-weight: 200;
     font-style: normal;
     font-display: swap;
@@ -160,31 +30,41 @@
 
 @font-face {
     font-family: 'SF Pro Display';
-    src: url('../fonts/SFProDisplay-ThinItalic.woff2') format('woff2'),
-        url('../fonts/SFProDisplay-ThinItalic.woff') format('woff'),
-        url('../fonts/SFProDisplay-ThinItalic.ttf') format('truetype');
-    font-weight: 100;
-    font-style: italic;
+    src: url('../fonts/SFProDisplay-Regular.woff2') format('woff2'),
+        url('../fonts/SFProDisplay-Regular.woff') format('woff'),
+        url('../fonts/SFProDisplay-Regular.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
     font-display: swap;
 }
 
 @font-face {
     font-family: 'SF Pro Display';
-    src: url('../fonts/SFProDisplay-UltralightItalic.woff2') format('woff2'),
-        url('../fonts/SFProDisplay-UltralightItalic.woff') format('woff'),
-        url('../fonts/SFProDisplay-UltralightItalic.ttf') format('truetype');
-    font-weight: 200;
-    font-style: italic;
+    src: url('../fonts/SFProDisplay-Semibold.woff2') format('woff2'),
+        url('../fonts/SFProDisplay-Semibold.woff') format('woff'),
+        url('../fonts/SFProDisplay-Semibold.ttf') format('truetype');
+    font-weight: 500;
+    font-style: normal;
     font-display: swap;
 }
 
 
-/* @font-face {
-    font-family: 'SF Pro Display 700 Normal';
+@font-face {
+    font-family: 'SF Pro Display Bold';
     src: url('../fonts/SFProDisplay-Bold.woff2') format('woff2'),
         url('../fonts/SFProDisplay-Bold.woff') format('woff'),
         url('../fonts/SFProDisplay-Bold.ttf') format('truetype');
-    font-weight: 700;
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+
+/* @font-face {
+    font-family: 'SF Pro Display';
+    src: url('../fonts/SFProDisplay-Black.woff2') format('woff2'),
+        url('../fonts/SFProDisplay-Black.woff') format('woff'),
+        url('../fonts/SFProDisplay-Black.ttf') format('truetype');
+    font-weight: 900;
     font-style: normal;
     font-display: swap;
 } */
